whoami-svc2/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc2
  labels:
    app: whoami-svc2
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: whoami-svc2
